[package]
name = "statskit"
version = "0.1.0"
edition = "2021"
description = "Statistical judgment and evaluation primitives"
license = "MIT OR Apache-2.0"
publish = true
repository = "https://github.com/arclabs561/statskit"
homepage = "https://github.com/arclabs561/statskit"
documentation = "https://docs.rs/statskit"
readme = "README.md"
keywords = ["statistics", "evaluation", "metrics"]
categories = ["science", "mathematics"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0"
innr = { version = "0.1.0", optional = true }

[features]
default = ["std"]
std = []
serde = ["dep:serde", "dep:serde_json"]
