[package]
name = "statskit"
version = "0.1.0"
edition = "2021"
description = "Statistical judgment and evaluation primitives"
license = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/arclabs561/statskit"
homepage = "https://github.com/arclabs561/statskit"
documentation = "https://github.com/arclabs561/statskit#readme"
readme = "README.md"
keywords = ["statistics", "evaluation", "metrics"]
categories = ["science", "mathematics"]

[dependencies]
# (intentionally none; keep this crate dependency-light)
